fixed some stupid mistakes

--- a/index.jade
+++ b/index.jade
@@ -10,7 +10,7 @@ html
         div#container
             div#name Blake Kostner
             div#sub one man. many missions.
-            a#links(href="http://pllus.google.com/+BlakeKostner")
+            a#links(href="http://plus.google.com/+BlakeKostner")
                 div#circle
                 i.fa.fa-google-plus.fa-3x
             a#links(href="http://facebook.com/btkostner")
