--- a/index.jade
+++ b/index.jade
@@ -1,30 +1,39 @@
-doctype html
-html
-    head
-        meta(charset="UTF-8")
-        title Blake Kostner
-        meta(name="description", content="one man. many missions. the home of Blake Kostner and his many projects.")
-        meta(name="author", content="Blake Kostner")
-        link(rel="stylesheet", type="text/css", href="main.css")
-    body
-        div#container
-            div#name Blake Kostner
-            div#sub one man. many missions.
-            a#links(href="http://plus.google.com/+BlakeKostner")
-                div#circle
-                i.fa.fa-google-plus.fa-3x
-            a#links(href="http://facebook.com/btkostner")
-                div#circle
-                i.fa.fa-facebook.fa-3x
-            a#links(href="https://twitter.com/btkostner")
-                div#circle
-                i.fa.fa-twitter.fa-3x
-            a#links(href="http://github.com/btkostner")
-                div#circle
-                i.fa.fa-github.fa-3x
-            a#links(href="http://www.linkedin.com/profile/view?id=386528345")
-                div#circle
-                i.fa.fa-linkedin.fa-3x
-            a#links(href="http://steamcommunity.com/id/btkostner")
-                div#circle
-                i.fa.fa-steam.fa-3x
+head
+  meta(charset='utf-8')
+  meta(http-equiv='X-UA-Compatible', content='IE=edge')
+  title btkostner.io
+  meta(name='description', content='btkostner.io')
+  meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
+  // I see you are looking for the source code.
+  // You might want to take a look at this instead:
+  // https://github.com/btkostner/btkostner.io
+  // Hint: look at the javascript. Enjoy. ~ Blake
+
+body
+  #grid
+  #container
+    header
+      .align
+        .grid
+          h1 Blake Kostner (btkostner)
+      .align
+        .grid
+          h2 // creator of over complicated grids
+    .space
+    .align
+      a(href="https://plus.google.com/+BlakeKostner")
+        .grid
+         h4 > Google +
+    .align
+      a(href="https://linkedin.com/profile/view?id=386528345")
+        .grid
+          h4 > Linkedin
+    .align
+      a(href="https://github.com/btkostner")
+        .grid
+          h4 > Github
+    .space
+    footer
+      .align
+        .grid
+          h5 coded with all the love in the world on open source projects
