--- a/main.styl
+++ b/main.styl
@@ -1,80 +1,127 @@
-@import "nib";
-@import url("http://fonts.googleapis.com/css?family=Roboto\+Condensed:400");
-@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
+@import url("http://fonts.googleapis.com/css?family=Roboto:100,300,400");
 
-global-reset()
+$colors             = {}
+$colors["-1"]       = rgb(197, 200, 198)
+$colors["0"]        = rgb(29, 31, 33)
+$colors["1"]        = rgb(204, 102, 102)
+$colors["2"]        = rgb(181, 189, 104)
+$colors["3"]        = rgb(240, 198, 116)
+$colors["4"]        = rgb(129, 162, 190)
+$colors["5"]        = rgb(178, 148, 187)
+$colors["6"]        = rgb(138, 190, 183)
+$colors["7"]        = rgb(197, 200, 198)
+$colors["8"]        = rgb(150, 152, 150)
 
 *
-    box-sizing border-box
+  box-sizing border-box
 
-html, body
-    height 100%
-    width 100%
+html,
+body
+  width 100%
+  height 100%
+  padding 0
+  margin 0
 
 body
-    animation background 30s ease infinite
-    background-color #e55c3a
-    color #f6f6f6
-    font-family 'Roboto Condensed', sans-serif
-    font-weight 400
+  background-color: $colors["0"]
+  left 0
+  position absolute
+  top 0
+  font-family 'Roboto', sans-serif
+  color: $colors["-1"]
+  min-width 448px
 
-div#container
-    position relative
-    text-align center
-    top 50%
-    transform translateY(-50%)
+h1
+  font-weight 300
+  height 64px
+  line-height 64px
+  font-size 32px
+  overflow hidden
+  padding 0
+  margin 0
+
+h2
+  font-weight 100
+  height 64px
+  line-height 64px
+  font-size 18px
+  overflow hidden
+  padding 0
+  margin 0
+
+header h1,
+header h2
+  padding-left 12px
+
+header .grid
+  border-color: $colors["1"]
+
+a .grid
+  padding-left 12px
+  min-width 128px
+  color: $colors["-1"]
+  text-decoration none
+  border-color: $colors["8"]
+  transition padding-left .2s ease
+
+  &:hover
+    padding-left 16px
+
+footer
+  position absolute
+  bottom -1px
+  left 0
+
+footer .grid
+  border-color: $colors["4"]
+  text-align center
+
+#container
+  position absolute
+  height auto
+  border: 1px solid transparent
+
+.align
+  display block
+  height 64px
+
+.space
+  display block
+  height 64px
+
+.grid
+  display inline-block
+  position relative
+  top -1px
+  left -1px
+  border: 1px solid transparent
+  background-color rgba(29, 31, 33, 0.75)
+  // background-color: $colors["0"]
+
+for n, c in $colors
+  .grid-{n}
+    border-color c
+
+#grid
+  left 0
+  position absolute
+  top 0
+  bottom 0
+  right 0
+  z-index -1
+
+  .vertical
+    position absolute
+    height 100%
+    width 1px
+    top 0
+    left 100%
+    background-color: lighten($colors["0"], 4%)
+
+  .horizonal
+    background-color: lighten($colors["0"], 4%)
+    height 1px
+    left 0
+    position absolute
+    top 100%
     width 100%
-
-div#name
-    animation text 30s ease infinite
-    font-size 64px
-    padding 0 16px 8px
-    text-shadow 0px 2px 0px rgba(246,246,246,0.30), 0px 4px 0px rgba(0,0,0,0.15)
-
-div#sub
-    font-size 18px
-    padding 0 16px 64px
-
-a#links
-    -webkit-mask-image url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC")
-    border-radius 64px
-    display inline-block
-    height 96px
-    margin 16px
-    overflow hidden
-    position relative
-    width 96px
-    > i
-        color white
-        position relative
-        text-shadow 0px 2px 0px rgba(246,246,246,0.30), 0px 4px 0px rgba(0,0,0,0.15)
-        top 50%
-        transform translateY(-50%)
-    > div#circle
-        border 4px dashed #f6f6f6
-        border-radius 64px
-        box-shadow 0px 4px 0px rgba(0,0,0,0.15)
-        height 96px
-        position absolute
-        transition 0.4s ease-in
-        width 96px
-        z-index 1
-    &:hover > div#circle
-        opacity 0
-        transform scale(1.2,1.2)
-
-@keyframes background
-    0%
-        background-color #e55c3a
-    50%
-        background-color #e6472e
-    100%
-        background-color #e55c3a
-
-@keyframes text
-    0%
-        text-shadow 0px 2px 0px rgba(246,246,246,0.30), 0px 4px 0px rgba(0,0,0,0.15)
-    50%
-        text-shadow 0px 6px 0px rgba(246,246,246,0.1), 0px 12px 0px rgba(0,0,0,0.05)
-    100%
-        text-shadow 0px 2px 0px rgba(246,246,246,0.30), 0px 4px 0px rgba(0,0,0,0.15)
