update views to use styles

--- a/assets/styles/variables.styl
+++ b/assets/styles/variables.styl
@@ -20,7 +20,7 @@ $colors                      = {}
 
 $colors["blue"]              = #268bd2
 $colors["gray"]              = #95A5AC
-$colors["orange"]            = #cb4b16
+$colors["orange"]            = #da6510
 $colors["pink"]              = #d33682
 $colors["red"]               = #dc322f
 $colors["teal"]              = #2aa198
@@ -34,7 +34,7 @@ $type                        = {}
 
 $type["font"]                = Roboto, "Open Sans", "Droid Sans", "Arial", "Helvetica", sans-serif;
 
-$type["link"]                = $colors["blue"]
+$type["link"]                = $colors["orange"]
 
 //==================
 // grid
