--- a/views/404.jade
+++ b/views/404.jade
@@ -1,3 +1,10 @@
-html
-  body
-    h1 404
+extends layout
+
+block body
+  main.page.section.center.text
+    div.vertical.grid
+      div.whole.width.cell
+        h1 404
+      div.whole.width.cell
+        h4
+          a(href="/") Home
