--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -1,3 +1,14 @@
-html
-  body
-    h1 homepage
+extends layout
+
+block body
+  main.page.section.center.text
+    div.vertical.grid
+      div.whole.width.cell
+        h1 Blake Kostner
+      div.whole.width.cell
+        h4
+          a(href="https://github.com/btkostner") Github
+          |  &middot;  
+          a(href="https://plus.google.com/+BlakeKostner") Google+
+          |  &middot;  
+          a(href="https://www.linkedin.com/in/btkostner") LinkedIn
