--- a/assets/styles/element/type.styl
+++ b/assets/styles/element/type.styl
@@ -113,3 +113,10 @@ p
 .inverted
   color: $tone["light"]
   text-shadow 0 1px 1px rgba(0, 0, 0, 0.3)
+
+//==================
+// alignment classes
+//==================
+
+[class*="center text"]
+  text-align center
