--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,3 +1,15 @@
+doctype html
+
 html
+  head
+    meta(charset="utf-8")
+    meta(http-equiv="x-ua-compatible", content="ie=edge")
+
+    title btkostner.io
+    meta(name="description", content="Home of Blake Kostner")
+
+    meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=no")
+
+    link(rel="stylesheet", type="text/css", href="/styles/main.css")
   body
     block body
